Completed updated all page visuals and fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
 
 body{
     font-family: 'Exo', Arial, Sans-Serif;
+    background-color: #0099ff;
 }
 
 #section {
@@ -28,6 +29,17 @@ body{
 .form{
     margin: 0px auto;
     text-align: center;
+}
+
+.button{
+    width: 10em;
+    height: 2.1em;
+    background-color: #0087e6;
+    border: 1px solid #CCC;
+    cursor: pointer;
+}
+.button:hover{
+    background-color: #4db6ff;
 }
 
 #data{
@@ -49,6 +61,10 @@ body{
 	display:inline-block;
 	vertical-align: middle;
 	margin: 0px auto;
+    border: 5px solid white;
+    clear: both;
+    padding: 2px;
+    margin: 5px;
 }
 
 #mainImg{
